--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -42,10 +42,10 @@ layout: default
           <div class="col-sm"><img class="flasche" src="img/IMG_20230905_180335.jpg" alt=""></div>
         </div>
         <div class="row dosen" style="padding-bottom: 5vw; padding-top: 5.8vw;">
-          <div class="col-sm"><video playsinline loop muted class="video-dose" src="img/Dose-1.mp4"></video></div>
-          <div class="col-sm"><video playsinline loop muted class="video-dose" src="img/Dose-2.mp4"></video></div>
-          <div class="col-sm"><video playsinline loop muted class="video-dose" src="img/Dose-3.mp4"></video></div>
-          <div class="col-sm"><video playsinline loop muted class="video-dose" style="height: 21vw;" src="img/Dose-4.mp4"></video></div>
+          <div class="col-sm"><video autoplay loop muted class="video-dose" src="img/Dose-1.mp4"></video></div>
+          <div class="col-sm"><video autoplay loop muted class="video-dose" src="img/Dose-2.mp4"></video></div>
+          <div class="col-sm"><video autoplay loop muted class="video-dose" src="img/Dose-3.mp4"></video></div>
+          <div class="col-sm"><video autoplay loop muted class="video-dose" style="height: 21vw;" src="img/Dose-4.mp4"></video></div>
     </div>
     <div class="swiffy-slider slider-nav-visible slider-nav-caretfill slider-indicators-sm">
       <ul class="slider-container">
@@ -64,10 +64,10 @@ layout: default
 
     <div class="swiffy-slider dosen-videos slider-nav-visible slider-nav-caretfill slider-indicators-sm">
       <ul class="slider-container">
-          <li><video playsinline loop muted class="video-dose" src="img/Dose-1.mp4"></video></li>
-          <li><video playsinline loop muted class="video-dose" src="img/Dose-2.mp4"></video></li>
-          <li><video playsinline loop muted class="video-dose" src="img/Dose-3.mp4"></video></li>
-          <li><video playsinline loop muted class="video-dose" src="img/Dose-4.mp4"></video></li>
+          <li><video autoplay loop muted class="video-dose2" src="img/Dose-1.mp4"></video></li>
+          <li><video autoplay loop muted class="video-dose2" src="img/Dose-2.mp4"></video></li>
+          <li><video autoplay loop muted class="video-dose2" src="img/Dose-3.mp4"></video></li>
+          <li><video autoplay loop muted class="video-dose2" src="img/Dose-4.mp4"></video></li>
       </ul>
   
       <button type="button" class="slider-nav"></button>
