--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -64,10 +64,10 @@ layout: default
 
     <div class="swiffy-slider dosen-videos slider-nav-visible slider-nav-caretfill slider-indicators-sm">
       <ul class="slider-container">
-          <li><video autoplay loop muted class="video-dose2" src="img/Dose-1.mp4"></video></li>
-          <li><video autoplay loop muted class="video-dose2" src="img/Dose-2.mp4"></video></li>
-          <li><video autoplay loop muted class="video-dose2" src="img/Dose-3.mp4"></video></li>
-          <li><video autoplay loop muted class="video-dose2" src="img/Dose-4.mp4"></video></li>
+          <li><video  autoplay="autoplay" loop="loop" muted defaultMuted playsinline  oncontextmenu="return false;"  preload="auto" class="video-dose2" src="img/Dose-1.mp4"></video></li>
+          <li><video  autoplay="autoplay" loop="loop" muted defaultMuted playsinline  oncontextmenu="return false;"  preload="auto" class="video-dose2" src="img/Dose-2.mp4"></video></li>
+          <li><video  autoplay="autoplay" loop="loop" muted defaultMuted playsinline  oncontextmenu="return false;"  preload="auto" class="video-dose2" src="img/Dose-3.mp4"></video></li>
+          <li><video  autoplay="autoplay" loop="loop" muted defaultMuted playsinline  oncontextmenu="return false;"  preload="auto" class="video-dose2" src="img/Dose-4.mp4"></video></li>
       </ul>
   
       <button type="button" class="slider-nav"></button>
