--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,8 +16,8 @@ layout: default
         
   <div class="container-main-point">
     <div class="text-marke">
-    <p class="craftstoff">CRAFTSTOFF®</p> <p>
-      ist eine Wortmarke eingetragen im <a href="img/Euipo Craftstoff Markenregister.pdf" target="_blank">Europäischen Markenregister</a> in den <br> 
+    <p class="craftstoff">CRAFTSTOFF<img src="img/R.png" alt=""></p> <p>
+      ist eine <b>Wortmarke</b> eingetragen im <a href="img/Euipo Craftstoff Markenregister.pdf" target="_blank">Europäischen Markenregister</a> in den <br> 
       Nizza-Klassifikationen:</p>
     <p><b><u>Klasse · 32</u></b><br>
       Alkoholfreie Getränke; Alkoholfreie Präparate für die Zubereitung von Getränken;<br>
@@ -37,11 +37,11 @@ layout: default
         <div class="heading-dosen">
         <h1>Beispiele/Muster:</h1>
         </div>
-        <div class="row flaschen" style="width: 80%; margin: auto;">
+        <div class="row flaschen" style="width: 65%; margin: auto;">
           <div class="col-sm"><img class="flasche" src="img/3 x Longneck.jpg" alt=""></div>
           <div class="col-sm"><img class="flasche" src="img/IMG_20230905_180335.jpg" alt=""></div>
         </div>
-        <div class="row dosen" style="padding-bottom: 5vw; padding-top: 5.8vw;">
+        <div class="row dosen" style="padding-bottom: 5vw; padding-top: 5.8vw;  width: 65%; margin: auto;">
           <div class="col-sm"><video autoplay loop muted class="video-dose" src="img/Dose-1.mp4"></video></div>
           <div class="col-sm"><video autoplay loop muted class="video-dose" src="img/Dose-2.mp4"></video></div>
           <div class="col-sm"><video autoplay loop muted class="video-dose" src="img/Dose-3.mp4"></video></div>
@@ -89,9 +89,9 @@ layout: default
           - auch diese Marke kann lizensiert werden.
           </p>
     </div>
-          <div class="row flaschen" style="width: 70%; margin: auto;">
+          <div class="row flaschen" style="width: 60%; margin: auto;">
             <div class="col-sm"><img class="flasche2" src="img/Craft Lager 0,33l.jpg" alt=""></div>
-            <div class="col-sm"><img class="flasche2" src="img/Craft alt.png" alt=""></div>
+            <div class="col-sm"><img class="flasche21" src="img/Craft alt.png" alt=""></div>
           </div>
 
           <div class="swiffy-slider slider-nav-visible slider-nav-caretfill slider-indicators-sm">
@@ -113,7 +113,7 @@ layout: default
           <p>Kontakt:
             <ul class="fa-ul">
             <li><span class="fa-li"><i class="fa-solid fa-user"></i></span> Brauerei Goldene Gans KG, Fritz Dürrwanger</li>
-            <li><span class="fa-li"><i class="fa-solid fa-location-dot"></i></span> Ostarchstraße 4a, 86165 Augsburg</li>  
+            <li><span class="fa-li"><i class="fa-solid fa-location-dot"></i></span> Ostrachstraße 4a, 86165 Augsburg</li>  
             <li><span class="fa-li"><i class="fa-solid fa-mobile-screen-button"></i></span> 0177 777 1346</li>  
             <li><span class="fa-li"><i class="fa-solid fa-envelope"></i></span> <a href="mailto:marke@craftstoff.com">marke@craftstoff.com</a></li>    
           </ul>
