--- a/assets/main.scss
+++ b/assets/main.scss
@@ -25,7 +25,7 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    height: 85vh;
+    height: 75vh;
     width: auto;
 
 }
@@ -38,6 +38,17 @@
     border-radius: 1rem;
     box-shadow: 5px 5px 15px 5px #000000;
 }
+
+.flasche21 {
+    height: 25vw;
+    width: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2.5vw;
+    
+}
+
 
 .flasche2 {
     height: 30vw;
@@ -67,7 +78,7 @@
     text-align: center;
 }
 .videos-dosen {
-    background-color: #252525;
+    background-color: #212121;
 }
 .video-dose {
     margin-top: 10vh;
@@ -108,12 +119,20 @@ a:hover {
     margin-right: auto;
     width: 800px;
     font-family: calibri;
+
+    .fa-ul {
+        margin-left: 30px !important;
+    }
 }
 
 .craftstoff {
     font-family: craft;
     font-size: 30pt;
 
+    img {
+        height: 18pt;
+        vertical-align: baseline;
+    }
 }
 
 
@@ -176,7 +195,7 @@ a:hover {
       height: 40vh;
       width: auto; /* Adjust width */
     }
-    
+
     .video-dose2 {
         margin-top: 0; /* Adjust margin */
         height: 40vh;
@@ -229,5 +248,10 @@ a:hover {
     }
     .craftstoff {
         font-size: 25pt;
+
+    img {
+        height: 10pt;
+        vertical-align: baseline;
+    }
     }
   }
