--- a/assets/main.scss
+++ b/assets/main.scss
@@ -146,12 +146,6 @@ a:hover {
 
 }
 
-@media (max-width: 1000px) {
-    .bg-palme {
-        height: auto;
-        max-width: 100%;  
-    }
-}
 
 @media (max-width: 767px) {
     .container-main-point {
@@ -169,7 +163,7 @@ a:hover {
     }
     .bg-palme {
       height: auto;
-      max-width: 100%;
+      max-width: 80vw;
     }
     .dosen-videos {
         padding-top: 1.5em;
