--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -37,15 +37,16 @@ layout: default
         <div class="heading-dosen">
         <h1>Beispiele/Muster:</h1>
         </div>
-        <div class="row flaschen" style="width: 65%; margin: auto;">
+        <div class="row flaschen" style="width: 70%; margin: auto;">
           <div class="col-sm"><img class="flasche" src="img/3 x Longneck.jpg" alt=""></div>
           <div class="col-sm"><img class="flasche" src="img/IMG_20230905_180335.jpg" alt=""></div>
         </div>
-        <div class="row dosen" style="padding-bottom: 5vw; padding-top: 5.8vw;  width: 65%; margin: auto;">
+        <div class="row dosen" style="padding-bottom: 5vw; padding-top: 5.8vw;  width: 70%; margin: auto;">
           <div class="col-sm"><video autoplay loop muted class="video-dose" src="img/Dose-1.mp4"></video></div>
-          <div class="col-sm"><video autoplay loop muted class="video-dose" src="img/Dose-2.mp4"></video></div>
-          <div class="col-sm"><video autoplay loop muted class="video-dose" src="img/Dose-3.mp4"></video></div>
           <div class="col-sm"><video autoplay loop muted class="video-dose" style="height: 21vw;" src="img/Dose-4.mp4"></video></div>
+          <div class="col-sm"><video autoplay loop muted class="video-dose" src="img/Dose-5.mp4"></video></div>
+          <div class="col-sm"><video autoplay loop muted class="video-dose" src="img/Dose-3.mp4"></video></div>
+          <div class="col-sm"><video autoplay loop muted class="video-dose" src="img/Dose-2.mp4"></video></div>
     </div>
     <div class="swiffy-slider slider-nav-visible slider-nav-caretfill slider-indicators-sm">
       <ul class="slider-container">
@@ -65,9 +66,10 @@ layout: default
     <div class="swiffy-slider dosen-videos slider-nav-visible slider-nav-caretfill slider-indicators-sm">
       <ul class="slider-container">
           <li><video  autoplay="autoplay" loop="loop" muted defaultMuted playsinline  oncontextmenu="return false;"  preload="auto" class="video-dose2" src="img/Dose-1.mp4"></video></li>
-          <li><video  autoplay="autoplay" loop="loop" muted defaultMuted playsinline  oncontextmenu="return false;"  preload="auto" class="video-dose2" src="img/Dose-2.mp4"></video></li>
-          <li><video  autoplay="autoplay" loop="loop" muted defaultMuted playsinline  oncontextmenu="return false;"  preload="auto" class="video-dose2" src="img/Dose-3.mp4"></video></li>
           <li><video  autoplay="autoplay" loop="loop" muted defaultMuted playsinline  oncontextmenu="return false;"  preload="auto" class="video-dose2" src="img/Dose-4.mp4"></video></li>
+          <li><video  autoplay="autoplay" loop="loop" muted defaultMuted playsinline  oncontextmenu="return false;"  preload="auto" class="video-dose2" src="img/Dose-5.mp4"></video></li>
+          <li><video  autoplay="autoplay" loop="loop" muted defaultMuted playsinline  oncontextmenu="return false;"  preload="auto" class="video-dose2" src="img/Dose-3.mp4"></video></li>
+          <li><video  autoplay="autoplay" loop="loop" muted defaultMuted playsinline  oncontextmenu="return false;"  preload="auto" class="video-dose2" src="img/Dose-2.mp4"></video></li>
       </ul>
   
       <button type="button" class="slider-nav"></button>
@@ -75,6 +77,7 @@ layout: default
   
       <div class="slider-indicators">
           <button class="active"></button>
+          <button></button>
           <button></button>
           <button></button>
           <button></button>
