--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -123,3 +123,7 @@ layout: default
           </p>
     </div>
   </div>
+  <div class="footer">
+    <a href="https://license.craftstoff.com/impressum">Impressum</a>
+    <a href="https://license.craftstoff.com/datenschutzerklaerung">Datenschutzerklärung</a>
+  </div>
