--- a/assets/main.scss
+++ b/assets/main.scss
@@ -249,3 +249,21 @@ a:hover {
     }
     }
   }
+
+  .datenschutz {
+    background-color: #e6e6e6;
+    padding: 50px 50px;
+  }
+
+  .impressum {
+    background-color: #e6e6e6;
+    padding: 200px 50px;
+    text-align: center;
+
+  }
+
+  .footer{
+    text-align: center;
+    margin-bottom: 2rem;
+    font-size: 13pt;
+  }
