--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -122,6 +122,13 @@ layout: default
           </ul>
           </p>
     </div>
+    
+    <div class="bottom-image">
+      <div class="bottom-band"></div>
+      <img src="img/Craftstoff - Alpine - Logo Cola.png" alt="">
+      <div class="bottom-band"></div>
+    </div>
+   
   </div>
   <div class="footer">
     <a href="https://license.craftstoff.com/impressum">Impressum</a> 
