--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -81,11 +81,12 @@ layout: default
           <button></button>
           <button></button>
           <button></button>
-      </div>
+      </div>^
   </div>
   <div class="bottom-band"></div>
   </div>
     </div>
+    <div class="text-ende">
     <div class="text-marke">
         <p>Gerne stehe ich zu einem Gespräch zur Verfügung.</p>
         <p>Im Markenbestand befindet sich auch die <b><a href="img/Registerauszug DPMA - Craft.pdf" target="_blank">deutsche Wortmarke Craft</a></b> explizit für Bier
@@ -122,7 +123,7 @@ layout: default
           </ul>
           </p>
     </div>
-    
+  </div>
     <div class="bottom-image">
       <div class="bottom-band"></div>
       <img src="img/Craftstoff - Alpine - Logo Cola.png" alt="">
