--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -124,11 +124,17 @@ layout: default
           </p>
     </div>
   </div>
-    <div class="bottom-image">
-      <div class="bottom-band"></div>
+ 
+  <div class="bottom-plakat">
+    <div class="bottom-band"></div>
+      <img src="img/Craftstoff - Alpine - Plakat neu.jpg" alt="">
+  </div>
+
+  <div class="bottom-image">
+    <div class="bottom-band"></div>
       <img src="img/Craftstoff - Alpine - Logo Cola.png" alt="">
-      <div class="bottom-band"></div>
-    </div>
+    <div class="bottom-band"></div>
+  </div>
    
   </div>
   <div class="footer">
